--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathlive",
+  "name": "@lls/mathlive",
   "version": "0.29.0",
   "description": "Render and edit beautifully typeset math",
   "license": "MIT",
@@ -53,7 +53,8 @@
     "prerollup": "echo Rollup...",
     "rollup": "rollup --config",
     "watch-rollup": "rollup --config --watch",
-    "dist": "npm-run-all -s clean build docs test"
+    "dist": "npm-run-all -s clean build docs test",
+    "babel": "rm -rf dist && npm run rollup && npx babel src --out-dir dist"
   },
   "nyc": {
     "exclude": [
