--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/arnog/mathlive.git"
+    "url": "https://github.com/lelivrescolaire/mathlive.git"
   },
   "keywords": [
     "math",
@@ -20,9 +20,7 @@
   ],
   "files": [
     "/dist",
-    "/src",
-    "/AUTHORS",
-    "/LICENSE.txt"
+    "/src"
   ],
   "main": "./dist/mathlive.js",
   "scripts": {
@@ -76,15 +74,6 @@
     "maintained node versions",
     "not dead"
   ],
-  "author": "Arno Gourdol <arno@arno.org>",
-  "contributors": [
-    "Louis Larpin (lilfaf.github.io)",
-    "Neil Soiffer (https://github.com/NSoiffer)",
-    "Jason Boxman (https://github.com/jboxman)",
-    "Synergy Codes (https://www.synergycodes.com/)",
-    "Rafał Piekarski (https://github.com/rpdiss)"
-  ],
-  "bugs": "https://github.com/arnog/mathlive/issues/",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
