--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mathlive",
+    "name": "@lls/mathlive",
     "version": "0.34.0",
     "description": "Render and edit beautifully typeset math",
     "license": "MIT",
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/arnog/mathlive.git"
+        "url": "https://github.com/lelivrescolaire/mathlive.git"
     },
     "keywords": [
         "math",
@@ -93,15 +93,6 @@
         "maintained node versions",
         "not dead"
     ],
-    "author": "Arno Gourdol <arno@arno.org>",
-    "contributors": [
-        "Louis Larpin (lilfaf.github.io)",
-        "Neil Soiffer (https://github.com/NSoiffer)",
-        "Jason Boxman (https://github.com/jboxman)",
-        "Synergy Codes (https://www.synergycodes.com/)",
-        "Rafał Piekarski (https://github.com/rpdiss)"
-    ],
-    "bugs": "https://github.com/arnog/mathlive/issues/",
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.4",
