--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
         "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
         "rollup": "^1.29.1",
+        "rollup-plugin-babel": "4.3.3",
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-terser": "^5.2.0",
         "sutro-jsdoc-theme": "^1.0",
