--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "types": "./dist/mathlive.d.ts",
     "scripts": {
         "clean": "rimraf build dist docs",
-        "build-js": "rollup --config",
-        "watch-js": "rollup --config --watch",
+        "build-js": "npx rollup --config",
+        "watch-js": "npx rollup --config --watch",
         "build-corecss": "lessc css/mathlive.core.less dist/mathlive.core.css",
         "build-othercss": "lessc css/mathlive.less dist/mathlive.css",
-        "build-postcss": "postcss dist/*.css -d dist",
+        "build-postcss": "npx postcss dist/*.css -d dist",
         "build-css": "npm-run-all -s build-corecss build-othercss build-postcss",
         "watch-css": "chokidar \"css/*.less\" --initial -c \"npm run build-css -s\"",
         "build-ts-types": "jsdoc -t node_modules/tsd-jsdoc/dist -d ./build -a public -r ./src/",
@@ -91,36 +91,37 @@
         "not dead"
     ],
     "devDependencies": {
-        "@babel/cli": "^7.8.3",
-        "@babel/core": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
-        "@babel/register": "^7.8.3",
+        "@babel/cli": "7.12.1",
+        "@babel/core": "7.12.3",
+        "@babel/preset-env": "7.12.1",
+        "@babel/register": "7.12.1",
         "@cortex-js/prettier-config": "^1.0.0",
-        "autoprefixer": "^9.7.4",
+        "autoprefixer": "10.0.1",
         "chokidar-cli": "^2.1.0",
         "cssnano": "^4.1.10",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.7.0",
-        "eslint-plugin-prettier": "^3.1.2",
-        "eslint-watch": "^6.0.1",
-        "http-server": "^0.12.1",
-        "husky": "^4.2.1",
-        "jsdoc": "^3.6.3",
-        "less": "^3.10.3",
-        "lint-staged": "^10.0.2",
+        "eslint": "7.13.0",
+        "eslint-config-prettier": "6.15.0",
+        "eslint-plugin-prettier": "3.1.4",
+        "eslint-watch": "7.0.0",
+        "http-server": "0.12.3",
+        "husky": "4.3.0",
+        "jsdoc": "3.6.6",
+        "less": "3.12.2",
+        "lint-staged": "10.5.1",
         "npm-run-all": "^4.1.5",
-        "nyc": "^15.0.0",
-        "postcss-cli": "^7.1.0",
-        "prettier": "^1.19.1",
-        "rimraf": "^3.0.0",
-        "rollup": "^1.29.1",
-        "rollup-plugin-babel": "4.3.3",
+        "nyc": "15.1.0",
+        "postcss": "8.1.6",
+        "postcss-cli": "8.2.0",
+        "prettier": "2.1.2",
+        "rimraf": "3.0.2",
+        "rollup": "2.33.1",
+        "rollup-plugin-babel": "4.4.0",
         "rollup-plugin-copy": "^3.3.0",
-        "rollup-plugin-terser": "^5.2.0",
+        "rollup-plugin-terser": "7.0.2",
         "sutro-jsdoc-theme": "^1.0",
         "tap-spec": "^5.0.0",
-        "tape": "^4.13.0",
-        "tsd-jsdoc": "^2.4.0"
+        "tape": "5.0.1",
+        "tsd-jsdoc": "2.5.0"
     },
     "dependencies": {}
 }
