--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-    "name": "mathlive",
+    "name": "@lls/mathlive",
     "version": "0.59.0",
     "description": "Render and edit beautifully typeset math",
     "license": "MIT",
-    "funding": {
-        "type": "patreon",
-        "url": "https://patreon.com/arnog"
-    },
     "repository": {
         "type": "git",
         "url": "https://github.com/lelivrescolaire/mathlive.git"
