--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
+  "plugins": ["@babel/proposal-class-properties"],
   "presets": [["@babel/env", {
+    "useBuiltIns": false,
     "targets": {
       "ie": "11"
     }
