--- a/package.json
+++ b/package.json
@@ -115,7 +115,9 @@
         "ts-jest": "^26.4.4",
         "typescript": "^4.0.5"
     },
-    "dependencies": {},
+    "dependencies": {
+        "@webcomponents/webcomponentsjs": "2.5.0"
+    },
     "keywords": [
         "math",
         "editor",
