--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
         "@rollup/plugin-node-resolve": "11.0.0",
         "@types/css-font-loading-module": "0.0.4",
         "@types/jest": "26.0.16",
-        "@types/node": "14.14.10",
         "@typescript-eslint/eslint-plugin": "4.9.0",
         "@typescript-eslint/parser": "4.9.0",
         "@typescript-eslint/typescript-estree": "4.9.0",
@@ -109,6 +108,7 @@
         "rollup": "2.34.2",
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-eslint": "^7.0.0",
+        "rollup-plugin-polyfill": "3.0.0",
         "rollup-plugin-postcss": "^3.1.8",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.29.0",
@@ -116,8 +116,7 @@
         "typescript": "^4.0.5"
     },
     "dependencies": {
-        "@webcomponents/shadycss": "1.10.2",
-        "@webcomponents/webcomponentsjs": "2.5.0"
+        "@webcomponents/webcomponentsjs": "2.2.10"
     },
     "keywords": [
         "math",
